--- a/MiniGames/Properties/Resources.resx
+++ b/MiniGames/Properties/Resources.resx
@@ -62,4 +62,10 @@
   <data name="night_city" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\night_city.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_5214_dancing_sphynx_cat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\_5214_dancing_sphynx_cat.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dancing_squirrel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dancing_squirrel.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
