--- a/MiniGames/Properties/Resources.resx
+++ b/MiniGames/Properties/Resources.resx
@@ -98,4 +98,7 @@
   <data name="_200_2009833_swiss_cheese_slice_pixel_art_swiss_cheese_pixel_art" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\_200_2009833_swiss_cheese_slice_pixel_art_swiss_cheese_pixel_art.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_572_5727123_bread_cat_pixel_art_clipart_png_download_overwatch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\_572_5727123_bread_cat_pixel_art_clipart_png_download_overwatch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
