feat : change mocing bloc height

--- a/MiniGames/Properties/Resources.resx
+++ b/MiniGames/Properties/Resources.resx
@@ -104,4 +104,13 @@
   <data name="pipe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pipe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pipeBrown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pipeBrown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ratBrown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ratBrown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ratBrownReverse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ratBrownReverse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
